--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -49,3 +49,8 @@
     color: rgb(0, 85, 251);
     transform: rotate(90deg);
 }
+.btn:disabled {
+    background: linear-gradient(0deg, #C4C4C4, #C4C4C4), linear-gradient(180deg, #45A6FF 0%, #0055FB 100%);
+border-radius: 5px;
+cursor: no-drop;
+}
