--- a/src/components/FormPage/FormPage.module.css
+++ b/src/components/FormPage/FormPage.module.css
@@ -4,7 +4,7 @@
     width: 800px;
 }
 .form{
-    
+    position: relative;
     height: max-content;
     text-align: left;
     padding-left: 30px;
@@ -23,4 +23,19 @@
     text-align: center;
     width: 800px;
     padding: 110px 0px;
+}
+
+.DragDrop{
+    display: flex;
+    justify-content: center;
+    align-items: center ;
+    z-index: 1000;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    border-radius: 5px;
+    outline-offset:-9px;
+    outline:1px dashed #ccc;
 }
